--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Recipes</title>
 <body>
-<h1> Odin Recipes </h1>   
+<h1>Recipes </h1>  
+
+<ul>
+ <li> <a href="recipes/lasagne.html">Lasagne</a> </li>    
+</ul>
 </body>
 
 </head>
