--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 <body>
 <h1>Recipes </h1>  
 
+<h4><strong>Savoury</strong></h4>
 <ul>
- <li> <a href="recipes/lasagne.html">Lasagne</a> </li>    
+ <li> <a href="recipes/lasagne.html">Lasagne</a> </li>   
+ 
+ <h4><strong>Sweet</strong></h4>
 </ul>
 </body>
 
